--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
 .center {
 text-align: center;
 }
@@ -54,7 +58,7 @@ body {
     border-radius: 10px;
     padding: 0 25px;
     font-size: 60px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 #footer {
